Added week 3 and 4